feature(shoppingCart): adds shopping cart context

--- a/packages/client/src/components/Cart/CartSelectedProduct/CartSelectedProduct.styles.css
+++ b/packages/client/src/components/Cart/CartSelectedProduct/CartSelectedProduct.styles.css
@@ -1,7 +1,7 @@
 .cart-selected-wrapper {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  text-align: left;
+  text-align: center;
 }
 
 .cart-selected-blank {
