--- a/packages/client/src/components/Navigation/Navigation.styles.css
+++ b/packages/client/src/components/Navigation/Navigation.styles.css
@@ -93,13 +93,22 @@ button {
   }
 }
 @media screen and (max-width: 670px) {
-  .navigation .nav {
-    display: block;
-  }
   .navbar-brand {
     position: absolute;
-    left: 10px;
-    top: 10px;
+    left: 20px;
+    top: 12px;
+  }
+  .login button {
+    width: 80px;
+    font-weight: 550;
+    padding: 8px 10px;
+    height: 30px;
+  }
+  .signup button {
+    width: 80px;
+    font-weight: 550;
+    padding: 8px 10px;
+    height: 30px;
   }
   .navigation .nav .links {
     display: none;
@@ -113,15 +122,21 @@ button {
     right: 10px;
     top: 5px;
   }
+  .logout-button-container button {
+    width: 80px;
+    font-weight: 550;
+    padding: 7px 10px;
+    height: 27px;
+  }
   .navigation .nav #links-mobile {
     width: 100%;
     background-color: #ebe4e1;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
-    padding-top: 10px;
-    padding-bottom: 5px;
+    margin-top: 25px;
+    padding-top: 20px;
+    padding-bottom: 1px;
     border-top: 1px solid rgb(212, 194, 194);
   }
   .nav-buttons {
@@ -129,9 +144,14 @@ button {
     flex-direction: column;
     margin-right: 20px;
   }
-  .nav-buttons .login {
-    padding-bottom: 10px;
+  .nav-buttons {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    right: 50px;
+    top: 3px;
   }
+
   .navigation .nav #links-mobile a {
     line-height: 30px;
   }
