fix image on related item

--- a/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
+++ b/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
@@ -10,6 +10,9 @@
   margin: 25px 0px;
   position: relative;
 }
+.relatedItems-heading {
+  text-align: left;
+}
 
 .related-items-display h2,
 .related-items-display p {
