--- a/packages/client/src/containers/Signup/Signup.styles.css
+++ b/packages/client/src/containers/Signup/Signup.styles.css
@@ -28,8 +28,7 @@ main {
   font-style: Bold;
   font-size: 1.5rem;
   color: #212121;
-  text-align: start;
-  margin-left: 14%;
+  text-align: center;
   padding-top: 15%;
 }
 
@@ -41,7 +40,7 @@ main {
 
 .signin-with-btn {
   display: flex;
-  margin-left: 13%;
+  justify-content: center;
   gap: 1.5rem;
 }
 
@@ -63,11 +62,6 @@ main {
   font-weight: 400;
   font-size: 0.75rem;
   color: #212121;
-}
-
-.or-text {
-  margin-left: 15%;
-  margin-right: 25%;
 }
 
 .signup-form {
@@ -117,7 +111,7 @@ main {
   font-style: 'SemiBold';
   font-size: 1rem;
   font-weight: 600;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   color: #212121;
 }
 
