Fix(Nav, Cart, ViewPageButton): fix mobile styles

--- a/packages/client/src/components/Cart/CartTotal/CartTotal.styles.css
+++ b/packages/client/src/components/Cart/CartTotal/CartTotal.styles.css
@@ -30,3 +30,10 @@
 .cart-total-amount div:last-child {
   font-weight: 600;
 }
+
+@media only screen and (max-width: 576px) {
+  .cart-total-amount {
+    text-align: center;
+    padding-left: 30px;
+  }
+}
