--- a/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
+++ b/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
@@ -12,9 +12,8 @@
 @media only screen and (max-width: 576px) {
   .view-page-button {
     grid-column: 1 / span 7;
-    width: 217px;
     height: 52px;
-    font-size: 24px;
-    padding: 11px 22px;
+    font-size: 20px;
+    padding: 0;
   }
 }
