fix(shopnow-button): center on mobile

--- a/packages/client/src/components/Body/Body.styles.css
+++ b/packages/client/src/components/Body/Body.styles.css
@@ -91,3 +91,9 @@
   line-height: 2.25rem;
   margin-left: 40%;
 }
+
+@media screen and (max-width: 750px) {
+  .shopnow-button {
+    margin: 30px auto 0 auto;
+  }
+}
