--- a/packages/client/src/containers/FavoritesPage/FavoritesPage.style.css
+++ b/packages/client/src/containers/FavoritesPage/FavoritesPage.style.css
@@ -23,3 +23,17 @@
   text-transform: uppercase;
   margin: 40px 0;
 }
+
+@media screen and (max-width: 768px) {
+  .my-favorites {
+    font-size: 2rem;
+  }
+
+  .favorite-list-view {
+    margin: 50px auto;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    background-color: #e4c1b1;
+  }
+}
