--- a/packages/client/src/components/Button/Button.styles.css
+++ b/packages/client/src/components/Button/Button.styles.css
@@ -1,12 +1,18 @@
 .storybook-button {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
-  border: 0;
+  border: none;
   border-radius: 3em;
   cursor: pointer;
   display: inline-block;
   line-height: 1;
 }
+
+.storybook-button:hover {
+  box-shadow: 0px 15px 20px #854f36;
+  transform: translateY(-3px);
+}
+
 .storybook-button--primary {
   color: white;
   background-color: #1ea7fd;
