--- a/packages/client/src/components/ProductCard/ProductCard.styles.css
+++ b/packages/client/src/components/ProductCard/ProductCard.styles.css
@@ -17,6 +17,11 @@
   text-decoration: none;
 }
 
+.product-title,
+.product-price-wrapper {
+  padding-left: 10px;
+}
+
 .product-img-wrapper {
   position: relative;
 }
@@ -66,11 +71,14 @@
   align-items: center;
   justify-content: space-between;
   width: 240px;
+  padding-right: 15px;
 }
 .product-price-wrapper p {
   display: inline-block;
   margin-left: 5px;
   margin-top: 10px;
+  color: #735848;
+  font-size: 0.8rem;
 }
 
 .product-rate-wrapper {
